chore: به‌روزرسانی خودکار - 2025-10-05 15:04
📅 تاریخ: 2025-10-05 15:04
🌿 شاخه: master
📊 آمار: 📁 19 فایل جدید

--- a/templates/accounts/AuditLog/log_list.html
+++ b/templates/accounts/AuditLog/log_list.html
@@ -42,10 +42,10 @@
                         </select>
                     </div>
                     <div style="min-width:150px;">
-                        <input type="text" id="date_from" name="date_from" autocomplete="off" class="form-control jalali-datepicker" placeholder="از تاریخ (1404/01/01)" value="{{ request.GET.date_from }}">
+                        <input type="text" id="date_from" name="date_from" autocomplete="off" class="form-control" data-jdp placeholder="از تاریخ (1404/01/01)" value="{{ request.GET.date_from }}">
                     </div>
                     <div style="min-width:150px;">
-                        <input type="text" id="date_to" name="date_to" autocomplete="off" class="form-control jalali-datepicker" placeholder="تا تاریخ (1404/12/29)" value="{{ request.GET.date_to }}">
+                        <input type="text" id="date_to" name="date_to" autocomplete="off" class="form-control" data-jdp placeholder="تا تاریخ (1404/12/29)" value="{{ request.GET.date_to }}">
                     </div>
                     <div class="w-100 d-none"></div>
                     <div class="flex-fill" style="min-width:220px;">
