--- a/templates/reports/exports/export_template.html
+++ b/templates/reports/exports/export_template.html
@@ -194,11 +194,11 @@
                         </div>
                         <div class="col-md-3">
                             <label class="form-label">تاریخ شروع</label>
-                            <input type="date" class="form-control" name="start_date" value="{{ filters.start_date }}">
+                            <input type="text" class="form-control" data-jdp name="start_date" placeholder="1404/01/01" value="{{ filters.start_date }}">
                         </div>
                         <div class="col-md-3">
                             <label class="form-label">تاریخ پایان</label>
-                            <input type="date" class="form-control" name="end_date" value="{{ filters.end_date }}">
+                            <input type="text" class="form-control" data-jdp name="end_date" placeholder="1404/12/29" value="{{ filters.end_date }}">
                         </div>
                         <div class="col-md-3">
                             <label class="form-label">سازمان</label>
