--- a/templates/reports/analytics/budget_analytics.html
+++ b/templates/reports/analytics/budget_analytics.html
@@ -208,11 +208,11 @@
                     <div class="row g-3">
                         <div class="col-md-3">
                             <label class="form-label">تاریخ شروع</label>
-                            <input type="date" class="form-control" name="start_date" value="{{ request.GET.start_date }}">
+                            <input type="text" class="form-control" data-jdp name="start_date" placeholder="1404/01/01" value="{{ request.GET.start_date }}">
                         </div>
                         <div class="col-md-3">
                             <label class="form-label">تاریخ پایان</label>
-                            <input type="date" class="form-control" name="end_date" value="{{ request.GET.end_date }}">
+                            <input type="text" class="form-control" data-jdp name="end_date" placeholder="1404/12/29" value="{{ request.GET.end_date }}">
                         </div>
                         <div class="col-md-3">
                             <label class="form-label">سازمان</label>
