--- a/templates/users/create_api_key.html
+++ b/templates/users/create_api_key.html
@@ -72,8 +72,8 @@
                         <label for="expiry_date" class="block text-sm font-medium text-gray-700 mb-2">
                             تاریخ انقضا (اختیاری)
                         </label>
-                        <input type="date" name="expiry_date" id="expiry_date" 
-                               class="form-control w-full">
+                        <input type="text" name="expiry_date" id="expiry_date" 
+                               class="form-control w-full" data-jdp placeholder="1404/12/29">
                         <p class="text-sm text-gray-500 mt-1">در صورت عدم انتخاب، کلید منقضی نخواهد شد</p>
                     </div>
                     
